# rust-diesel-actix-test

./: Cargo.toml  README.md
migrations/2021-10-04-190441_home/: up.sql
src/: db.rs  main.rs  person.rs  schema.rs
static/: index.html
