[package]
name = "rust-diesel-actix-test"
version = "0.1.0"
authors = ["DanielMehlber <daniel.mehlber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "3.3.0"
diesel = {version="1.4.6",features=["mysql"]}
serde_json = "1.0.67"
serde = "1.0.129"