[package]
name = "rust-diesel-actix-test"
version = "0.1.0"
authors = ["DanielMehlber <daniel.mehlber@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# basic web features
actix-web = "3.3.0"

# for static files
actix-files = "0.5.0"

# for database and sql support
diesel = {version="1.4.6",features=["mysql" ,"r2d2"]}

# for serialization
serde_json = "1.0.67"
serde = "1.0.129"